--- a/src/components/GlyphSelector/styles.module.scss
+++ b/src/components/GlyphSelector/styles.module.scss
@@ -9,7 +9,7 @@
   height: 100dvh;
   right: 0%;
   margin: 0;
-  padding: 8px;
+  padding: 0px 8px 8px;
   position: absolute;
   transition: transform 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
   top: 0px;
