--- a/src/components/GlyphSelector/styles.module.scss
+++ b/src/components/GlyphSelector/styles.module.scss
@@ -15,6 +15,16 @@
   top: 0px;
   width: fit-content;
 
+  &--header {
+    display: flex;
+    flex-flow: column wrap;
+    left: 0px;
+    gap: 1px;
+    position: absolute;
+    top: 0px;
+    transform: translate3d(-100%, 0px, 0px);
+  }
+
   &--item {
     background: transparent;
     border: none;
@@ -34,8 +44,6 @@
     color: var(--bg-panel);
     left: 0px;
     height: 50px;
-    position: absolute;
-    transform: translate3d(-100%, 0px, 0px);
     top: 51px;
     width: 50px;
 
