--- a/src/components/Glyph/Composite/Info/style.module.scss
+++ b/src/components/Glyph/Composite/Info/style.module.scss
@@ -1,10 +1,10 @@
 .glyph--info {
   display: flex;
   gap: 12px;
-  max-width: 200px;
-  margin: 0 0 0 20px;
+  margin: 0;
   flex-flow: row wrap;
   padding: 0;
+  pointer-events: none;
   position: absolute;
   transform: translate3d(0px, calc(-100% - 36px), 0px);
   width: auto;
@@ -12,7 +12,8 @@
   &--controls {
     display: flex;
     gap: 4px;
-    flex-direction: column;
+    flex-direction: row;
+    pointer-events: none;
     width: fit-content;
     
     button {
@@ -26,6 +27,7 @@
       flex-flow: row wrap;
       justify-content: center;
       outline: none;
+      pointer-events: auto;
       position: relative;
       width: 40px;
 
@@ -59,6 +61,15 @@
         }
       }
     }
+
+    &--disabled {
+      pointer-events: none !important;
+
+      &:before,
+      &:after {
+        display: none;
+      }
+    }
   }
 
   &--contours {
@@ -69,6 +80,7 @@
     overflow: hidden;
     overflow-y: auto;
     margin-top: 12px;
+    pointer-events: auto;
     padding: 0px 10px 0px 20px;
     scrollbar-gutter: stable;
     width: 100%;
