--- a/src/components/Glyph/Composite/Info/style.module.scss
+++ b/src/components/Glyph/Composite/Info/style.module.scss
@@ -21,7 +21,7 @@
       background: transparent;
       border: none;
       box-shadow: none;
-      color: var(--text-main);
+      color: #FFF;
       display: flex;
       height: 40px;
       flex-flow: row wrap;
