--- a/src/components/GlyphSelector/styles.module.scss
+++ b/src/components/GlyphSelector/styles.module.scss
@@ -57,6 +57,10 @@
   }
 
   &[data-active="true"] {
+    transform: translate3d(0%, 0px, 0px);
+  }
+
+  &[data-active="false"] {
     transform: translate3d(100%, 0px, 0px);
   }
 }
