--- a/src/components/Glyph/Composite/Info/style.module.scss
+++ b/src/components/Glyph/Composite/Info/style.module.scss
@@ -62,6 +62,18 @@
       }
     }
 
+    &--group {
+      position: relative;
+      
+      button {
+        &:last-child {
+          left: 0px;
+          position: absolute;
+          top: 100%;
+        }
+      }
+    }
+
     &--disabled {
       pointer-events: none !important;
 
