--- a/src/components/Form/Glyph/styles.module.scss
+++ b/src/components/Form/Glyph/styles.module.scss
@@ -42,11 +42,12 @@
           overflow: hidden;
           text-overflow: ellipsis;
           width: 100%;
+          white-space: nowrap;
         }
 
         &--range {
           display: flex;
-          height: 140px;
+          height: 100px;
           overflow: hidden;
           position: relative;
           width: 40px;
