--- a/src/components/Form/Glyph/styles.module.scss
+++ b/src/components/Form/Glyph/styles.module.scss
@@ -4,7 +4,7 @@
   bottom: 0px;
   display: flex;
   flex-flow: row nowrap;
-  left: 0px;
+  right: 0px;
   gap: 20px;
   height: fit-content;
   overflow: hidden;
